<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_menu_title"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.15">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/start_menu_tv_email"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:textAlignment="textEnd"
            android:layout_margin="10sp"
            />

        <EditText
            android:id="@+id/start_menu_et_email"
            android:text="@string/start_menu_my_email"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_marginEnd="20sp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/start_menu_ll_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.35">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/start_menu_tv_password"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:textAlignment="textEnd"
            android:layout_margin="10sp"
            />

        <EditText
            android:id="@+id/start_menu_et_password"
            android:text="@string/start_menu_my_password"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_marginEnd="20sp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:id="@+id/start_menu_btn_enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_menu_btn_enter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_menu_ll_password"
        style="@style/btn_blue"
        app:layout_constraintVertical_bias="0.2"
        />

    <Button
        android:id="@+id/start_menu_btn_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_menu_btn_registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_menu_ll_password"
        style="@style/btn_green"
        app:layout_constraintVertical_bias="0.6"
        />


</androidx.constraintlayout.widget.ConstraintLayout>