<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RequestActivity"
    >

    <TextView
        android:id="@+id/request_tv_nick"
        android:layout_width="0sp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent=".8"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.15">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20sp"
                android:text="@string/request_menu_title"
                android:textSize="28sp"
                android:textStyle="bold" />

            <!-- POL -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="20sp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/request_menu_tv_from"
                    android:textAlignment="textEnd"
                    android:textSize="20sp" />

                <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/request_sp_pol"
                    android:layout_margin="5sp"
                    android:layout_weight="5"
                    android:layout_gravity="center_vertical"
                    app:smsp_errorText=""
                    app:smsp_floatingLabelColor="@color/floating_label_color"
                    app:smsp_floatingLabelText="@string/request_city_floatingLabelText"
                    app:smsp_hint="@string/request_city_hint_Text"
                    app:smsp_hintColor="@color/smsp_hint_color"
                    app:smsp_itemColor="@color/blue"
                    app:smsp_itemSize="20sp"
                    app:smsp_isSearchable="true"
                    app:smsp_itemListColor="@color/blue"
                    app:smsp_itemListHintBackgroundColor="@color/item_list_background_color"
                    app:smsp_itemListHintColor="@color/item_list_hint_color"
                    app:smsp_multilineError="false"
                    app:smsp_selectedItemListColor="@color/light_blue"
                    />

            </LinearLayout>

            <!-- POD -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="20sp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/request_menu_tv_to"
                    android:textAlignment="textEnd"
                    android:textSize="20sp" />

                <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
                    android:id="@+id/request_sp_pod"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5sp"
                    android:layout_weight="5"
                    android:gravity="center_vertical"
                    app:smsp_errorText=""
                    app:smsp_floatingLabelColor="@color/floating_label_color"
                    app:smsp_floatingLabelText="@string/request_city_floatingLabelText"
                    app:smsp_hint="@string/request_city_hint_Text"
                    app:smsp_hintColor="@color/smsp_hint_color"
                    app:smsp_itemColor="@color/blue"
                    app:smsp_itemSize="20sp"
                    app:smsp_isSearchable="true"
                    app:smsp_itemListColor="@color/blue"
                    app:smsp_itemListHintBackgroundColor="@color/item_list_background_color"
                    app:smsp_itemListHintColor="@color/item_list_hint_color"
                    app:smsp_multilineError="false"
                    app:smsp_selectedItemListColor="@color/light_blue"/>

            </LinearLayout>

            <!-- Cargo -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/request_menu_tv_cargo"
                    android:textSize="20sp"
                    android:layout_margin="20sp"
                    android:gravity="center_vertical"
                    android:textAlignment="textEnd"/>

                <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
                    android:id="@+id/request_sp_cargoes"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical"
                    app:smsp_errorText=""
                    app:smsp_floatingLabelColor="@color/floating_label_color"
                    app:smsp_floatingLabelText="@string/request_cargo_floatingLabelText"
                    app:smsp_hint="@string/request_cargo_hint_Text"
                    app:smsp_hintColor="@color/smsp_hint_color"
                    app:smsp_itemColor="@color/blue"
                    app:smsp_itemSize="20sp"
                    app:smsp_isSearchable="true"
                    app:smsp_itemListColor="@color/blue"
                    app:smsp_itemListHintBackgroundColor="@color/item_list_background_color"
                    app:smsp_itemListHintColor="@color/item_list_hint_color"
                    app:smsp_multilineError="false"
                    app:smsp_selectedItemListColor="@color/light_blue" />
            </LinearLayout>

            <!-- Gross weight and currency -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent"
                        android:text="@string/request_menu_tv_gw"
                        android:textSize="20sp"
                        android:layout_marginTop="20sp"
                        android:layout_marginStart="10sp"
                        android:layout_marginEnd="10sp"
                        android:layout_marginBottom="20sp"
                        android:gravity="center_vertical"
                        android:textAlignment="textEnd"/>
                    <EditText
                        android:id="@+id/request_et_gross_weight"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center_vertical"
                        android:hint="Weight"
                         />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:text="@string/request_menu_tv_currency"
                        android:textSize="20sp"
                        android:layout_marginTop="20sp"
                        android:layout_marginStart="10sp"
                        android:layout_marginEnd="10sp"
                        android:layout_marginBottom="20sp"
                        android:gravity="center_vertical"
                        android:textAlignment="textEnd"/>
                    <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
                        android:id="@+id/request_sp_currency"
                        android:layout_width="0dp"
                        android:layout_weight="4"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:gravity="center_vertical"
                        app:smsp_errorText=""
                        app:smsp_floatingLabelColor="@color/floating_label_color"
                        app:smsp_floatingLabelText="@string/request_currency_floatingLabelText"
                        app:smsp_hint="@string/request_cargo_hint_Currency"
                        app:smsp_hintColor="@color/smsp_hint_color"
                        app:smsp_itemColor="@color/blue"
                        app:smsp_itemSize="20sp"
                        app:smsp_isSearchable="true"
                        app:smsp_itemListColor="@color/blue"
                        app:smsp_itemListHintBackgroundColor="@color/item_list_background_color"
                        app:smsp_itemListHintColor="@color/item_list_hint_color"
                        app:smsp_multilineError="false"
                        app:smsp_selectedItemListColor="@color/light_blue"
                        />

            </LinearLayout>

            <!-- Sort, with rates and valid rates -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    android:text="@string/request_menu_tv_sort_by"
                    android:textSize="20sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:layout_marginBottom="20sp"
                    android:gravity="center_vertical"
                    android:textAlignment="textEnd"/>
                <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
                    android:id="@+id/request_sp_sort"
                    android:layout_width="0dp"
                    android:layout_weight="4"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_vertical"
                    app:smsp_errorText=""
                    app:smsp_floatingLabelColor="@color/floating_label_color"
                    app:smsp_floatingLabelText="@string/request_sort_by_floatingLabelText"
                    app:smsp_hint="@string/request_cargo_hint_sort_by"
                    app:smsp_hintColor="@color/smsp_hint_color"
                    app:smsp_itemColor="@color/blue"
                    app:smsp_itemSize="20sp"
                    app:smsp_itemListColor="@color/blue"
                    app:smsp_itemListHintBackgroundColor="@color/item_list_background_color"
                    app:smsp_itemListHintColor="@color/item_list_hint_color"
                    app:smsp_multilineError="false"
                    app:smsp_selectedItemListColor="@color/light_blue"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp">

                        <CheckBox
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:theme="@style/myCheckBox"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:id="@+id/request_tv_with_rates"
                            android:text="@string/request_menu_tv_with_rates"
                            android:textSize="16sp"
                            android:gravity="center_vertical"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp">

                        <CheckBox
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:theme="@style/myCheckBox"
                            />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="4"
                            android:id="@+id/request_tv_valid_rates"
                            android:text="@string/request_menu_tv_valid_rates"
                            android:textSize="16sp"
                            android:gravity="center_vertical"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!-- Button Send -->
            <Button
                android:id="@+id/request_btn_send"
                style="@style/btn_blue"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="10dp"
                android:text="@string/request_btn_send" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>