<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_menu_title"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.05">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/registration_menu_email"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:textAlignment="textEnd"
            android:layout_margin="10sp"
            />

        <EditText
            android:id="@+id/registration_menu_et_email"
            android:inputType="textEmailAddress"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_marginEnd="20sp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.2">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/registration_menu_name"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:textAlignment="textEnd"
            android:layout_margin="10sp"
            />

        <EditText
            android:id="@+id/registration_menu_et_name"
            android:inputType="textPersonName"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_marginEnd="20sp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.35">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/registration_menu_password"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:textAlignment="textEnd"
            android:layout_margin="10sp"
            />

        <EditText
            android:id="@+id/registration_menu_et_password"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_marginEnd="20sp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/registration_menu_repeat"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:textAlignment="textEnd"
            android:layout_margin="10sp"
            />

        <EditText
            android:id="@+id/registration_menu_et_repeat"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_marginEnd="20sp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.7">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/registration_menu_avatar"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:textAlignment="textEnd"
            android:layout_margin="10sp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:id="@+id/registration_iv_avatar"
            app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
            app:strokeWidth="1dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/registration_btn_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration_menu_pick_image"
                style="@style/small_btn_green_normal_width"/>

        </LinearLayout>





    </LinearLayout>

    <Button
        android:id="@+id/registration_menu_btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_menu_btn_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        style="@style/btn_light_blue"
        app:layout_constraintVertical_bias="0.9"
        />

</androidx.constraintlayout.widget.ConstraintLayout>